feat(stock): 재고 수량 변경 일자(lastOrderedAt) 추가 및 상품 도메인 전반 개선
ProductStock 엔티티에 재고가 변경된 날짜(주문/입출고 일자)를 기록하는 lastOrderedAt
필드를 추가하고, DTO, Repository, Service, Controller 레이어 전반에 반영합니다.

[주요 변경 사항]
1. Entity (ProductStock)
   - lastOrderedAt (LocalDateTime) 필드 및 매핑 추가
   - 수량 변경(increase/decrease) 시 lastOrderedAt 자동 갱신 로직 반영
   - 특정 일시 지정(updateLastOrderedAt) 및 현재 시각 즉시 갱신(touchLastOrderedAt) 메서드 추가

2. DTO (ProductResponse)
   - lastOrderedAt 필드 추가 및 Entity-DTO 변환 팩토리 메서드(from) 업데이트

3. Repository
   - ProductRepository: JPQL constructor projection 쿼리에 ps.lastOrderedAt 필드 추가
   - ProductStockRepository: 벌크 수량 증가/감소 시 lastOrderedAt 함께 업데이트하도록 수정 및 단독 수정 쿼리 추가

4. Service & Controller (ProductService, ProductController)
   - 주문 일자 단독 변경 비즈니스 로직(updateLastOrderedAt) 추가
   - PATCH /api/v1/products/{id}/last-ordered-at 엔드포인트 추가